tests/ui/pattern_wrong_type.stderr
Error [E0305]: pattern `Red` doesn't match Int?
  --> tests/ui/pattern_wrong_type.jet:7:8
    |
  7 |     if n == Red {
    |        ^^^^^^^^
 Why: variant patterns only work on enum values
 Fix: test an enum value, or use `value` / `null` for optionals
