tests/ui/pattern_wrong_type.lex
enum Light {
    Red;
}

fn main() {
    val n: Int? = value(1);
    if n == Red {
        print("x");
    }
}
